Added search id and img properties in style.css

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <a href="Google logo"><img src=https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png></a>
+        <img src=https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png alt="Google logo" class=center>
         <form>
             <a href="magnifying"><img src=google_magnifying_glass.png></a>
             <input type="search" id="search" name="search">
