Updated style of search bar and added elements for navbar

--- a/index.html
+++ b/index.html
@@ -4,9 +4,24 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <img src=https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png alt="Google logo" class=center>
-        <form>
-            <input type="search" id="search" name="search">
-        </form>
+        <div>
+            <img src=https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png alt="Google Logo">
+        </div>
+        
+        <div>
+            <form>
+                <input type="text" id="search" name="search">
+            </form>
+        </div>
+
+        <div>
+            <ul>
+                <li><a href="about">About</a></li>
+                <li><a href="store">Store</a></li>
+                <li><a href="gmail">Gmail</a></li>
+                <li><a href="images">Images</a></li>
+                <li><a href="sign_in">Sign in</a></li>
+            </ul>
+        </div>
     </body>
 </html>
