--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 
         <div>
             <ul>
-                <li><a href="about">About</a></li>
-                <li><a href="store">Store</a></li>
-                <li><a href="gmail">Gmail</a></li>
-                <li><a href="images">Images</a></li>
-                <li><a href="sign_in">Sign in</a></li>
+                <li><a class=flexStart href="about">About</a></li>
+                <li><a class=flexStart href="store">Store</a></li>
+                <li><a class=flexEnd href="gmail">Gmail</a></li>
+                <li><a class=flexEnd href="images">Images</a></li>
+                <li><a class=flexEnd href="sign_in">Sign in</a></li>
             </ul>
         </div>
     </body>
