--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>Google Homepage</title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
@@ -14,14 +19,17 @@
             </form>
         </div>
 
-        <div>
-            <ul>
-                <li><a class=flexStart href="about">About</a></li>
-                <li><a class=flexStart href="store">Store</a></li>
-                <li><a class=flexEnd href="gmail">Gmail</a></li>
-                <li><a class=flexEnd href="images">Images</a></li>
-                <li><a class=flexEnd href="sign_in">Sign in</a></li>
+        <nav>
+            <ul class=nav_1>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Store</a></li>
             </ul>
-        </div>
+            <ul class=nav_2>
+                <li><a href="#">Gmail</a></li>
+                <li><a href="#">Images</a></li>
+                <li><a class=sign_in href="#"><button>Sign in</button></a></li>
+            </ul>
+            
+        </nav>
     </body>
 </html>
