--- a/index.html
+++ b/index.html
@@ -7,18 +7,17 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
         <div>
             <img src=https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png alt="Google Logo">
         </div>
-        
         <div>
             <form>
                 <input type="text" id="search" name="search">
             </form>
         </div>
-
         <nav>
             <ul class=nav_1>
                 <li><a href="#">About</a></li>
@@ -27,9 +26,13 @@
             <ul class=nav_2>
                 <li><a href="#">Gmail</a></li>
                 <li><a href="#">Images</a></li>
-                <li><a class=sign_in href="#"><button>Sign in</button></a></li>
+                <li><a href="#"><i class="fa fa-th fa-lg"></i></a></li>
+                <li><a class=sign_in href="#"><button class=sign_in_button>Sign in</button></a></li>
             </ul>
-            
         </nav>
+        <div>
+            <a href="#" id=google_search><button>Google Search</button></a>
+            <a href="#" class=feeling-lucky><button>I'm Feeling Lucky</button></a>
+        </div>
     </body>
 </html>
