--- a/index.html
+++ b/index.html
@@ -16,23 +16,37 @@
         <div>
             <form>
                 <input type="text" id="search" name="search">
+                <p><img class=mag_glass src=mag_glass.png></p>
+                <p><img class=google_mic src=google_mic.png></p>
+                <input id=google_search type="submit" value="Google Search">
+                <input id=feeling_lucky type="submit" value="I'm Feeling Lucky">
             </form>
         </div>
         <nav>
             <ul class=nav_1>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Store</a></li>
+                <li class=navbar><a href="#">About</a></li>
+                <li class=navbar><a href="#">Store</a></li>
             </ul>
             <ul class=nav_2>
-                <li><a href="#">Gmail</a></li>
-                <li><a href="#">Images</a></li>
-                <li><a href="#"><i class="fa fa-th fa-lg"></i></a></li>
+                <li class=navbar><a href="#">Gmail</a></li>
+                <li class=navbar><a href="#">Images</a></li>
+                <li class=navbar><a href="#"><i class="fa fa-th fa-lg"></i></a></li>
                 <li><a class=sign_in href="#"><button class=sign_in_button>Sign in</button></a></li>
             </ul>
         </nav>
-        <div>
-            <a href="#" id=google_search><button>Google Search</button></a>
-            <a href="#" class=feeling-lucky><button>I'm Feeling Lucky</button></a>
+        <div class=footer>
+            <nav>
+                <ul class=nav_3>
+                    <li><a href="#">Advertising</a></li>
+                    <li><a href="#">Business</a></li>
+                    <li><a href='#'>How Search works</a></li>
+                </ul>
+                <ul class=nav_4>
+                    <li><a href="#">Privacy</a></li>
+                    <li><a href="#">Terms</a></li>
+                    <li><a href="#">Settings</a></li>
+                </ul>
+            </nav>
         </div>
     </body>
 </html>
